[tool.poetry]
name = "openeo-fastapi-service"
version = "0.1.0"
description = ""
authors = ["Tomas Kliment <tomas@klimeto.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
fastapi_utils = "^0.2.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
